just finished the functionality

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="http://localhost:3000/popup?config={'name':'Hesham mohammed'}">
-      const params =  URLSearchParams().append("name", "hesham")
-      console.log(url);
-    </script>
+    <script src="https://hisham-mhammed-afifi.github.io/new-popup/popup.js"></script>
+    <!-- <script type="module" src="./popup.js"></script> -->
   </body>
 </html>
