--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="https://hisham-mhammed-afifi.github.io/new-popup/popup.js"></script>
+    <script
+      type="module"
+      src="https://hisham-mhammed-afifi.github.io/new-popup/popup.js"
+    ></script>
     <!-- <script type="module" src="./popup.js"></script> -->
   </body>
 </html>
